Сделал адаптив, но без меню

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <span class="watch-text">Watch video</span>
             </div>
           </div>
-          <img src="img/hiro-bg.jpg" alt="" class="hiro-image" />
+          <div class="hiro-image"></div>
         </div>
         <div class="hiro-panel">
           <div class="search-option">
