--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
   </head>
   <body>
     <header class="header">
+      <a href="#" class="menu-button">
+        <img src="img/menu-burger.svg" alt="">
+      </a>
       <div class="navbar">
+        <a href="#" class="close-button">&times;</a>
         <a href="#" class="logo">
           <img src="img/logo.svg" alt="Logo" class="logo-image" />
           <span class="logo-text">Hotelo</span>
